--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>classroom</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis modi provident, facilis natus unde magni quis delectus totam, consequatur neque debitis minus excepturi error incidunt necessitatibus est vero ea ratione.</p>
 </body>
 </html>
