--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>classroom</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis modi provident, facilis natus unde magni quis delectus totam, consequatur neque debitis minus excepturi error incidunt necessitatibus est vero ea ratione.</p>
+    <h2>home</h2>
 </body>
 </html>
